# Nuvi

./: README.md
ETA_human_calculator/: CMakeLists.txt  package.xml
ETA_human_calculator/data/23-24/: people_matrix_23_24시_v0.txt
ETA_human_calculator/data/6-7/: people_matrix_6_7시_v3.txt
ETA_human_calculator/data/7-8/: people_matrix_7_8시_v0.txt
ETA_human_calculator/src/: ETA_before.cpp  ETA_human_calculator.cpp
angle_calculator/: CMakeLists.txt  package.xml  setup.py
angle_calculator/angle_calculator/: extract_edge_angle.py
cartographer/: CMakeLists.txt  package.xml
cartographer/launch/: cartographer.launch.py  cartographer_rviz.launch.py  occupancy_grid.launch.py
mapMergeForMultiRobotMapping-ROS2/merge_map/merge_map/: merge_map.py
my_navigation/: CMakeLists.txt  copy_topic.py  package.xml
my_navigation/config/: navigation2.yaml
my_navigation/launch/: navigation.launch.py  tetra_lidar.launch.py
my_navigation/map/: 111.pgm  111.yaml  112.pgm  112.yaml  112_2.pgm  112_2.yaml  map.pgm  map.yaml  map_2.pgm  map_2.yaml  map_real.pgm  map_real.yaml  prac.pgm  prac.yaml
my_slam_main/: CMakeLists.txt  package.xml
my_slam_main/launch/: my_slam.launch.py
my_slam_main/rviz/: slam.rviz
navigation/goal_msgs/: CMakeLists.txt  package.xml
navigation/goal_msgs/srv/: Goal.srv
navigation/tetra_goal_publisher/: CMakeLists.txt  package.xml
navigation/tetra_goal_publisher/src/: goal_trigger.cpp
navigation/tetra_navigation/: CMakeLists.txt  package.xml
navigation/tetra_navigation/config/: navigation2.yaml
navigation/tetra_navigation/launch/: navigation.launch.py
navigation/tetra_navigation/map/: map1001.yaml  map1002.pgm  map1002.yaml  map102.pgm  map102.yaml  map12312312312213.pgm  map12312312312213.yaml  map_1.pgm  map_1001.pgm  map_1_1.pgm  map_1_1.yaml  map_2.pgm  map_3_real.pgm  map_5_1.pgm  map_5_1.yaml  map_5_b1.pgm  map_5_b1.yaml
navigation/tetra_navigation/rviz/: nav2_realsensed455_view.rviz
robot_mqtt/: .env  package-lock.json  package.json  server.js
ros_mqtt_bridge/: package.xml  setup.py
ros_mqtt_bridge/ros_mqtt_bridge/: ros_to_mqtt_bridge.py
sllidar_ros2/launch/: sllidar_a2m12_launch .py  view_sllidar_a2m12_launch.py
tetra_goal_publisher/: CMakeLists.txt  package.xml
tetra_goal_publisher/config/: destinations.txt
tetra_goal_publisher/src/: goal_publisher.cpp  navigate_from_txt.cpp
tetra_hyu/: README.md
tetra_hyu/test_tetra/: CMakeLists.txt  package.xml
tetra_hyu/test_tetra/src/: test_tetra.cpp
tetra_hyu/tetra/: CMakeLists.txt  package.xml
tetra_hyu/tetra/src/: angle_prediction.cpp  tetra.cpp
tetra_hyu/tetra_description/: CMakeLists.txt
tetra_hyu/tetra_description/launch/: tetra_description.launch.py
tetra_hyu/tetra_description/urdf/: base.urdf.xacro  tetra.xacro
tetra_hyu/tetra_teleop/: setup.cfg  setup.py
tracking_sim/: CMakeLists.txt  package.xml
tracking_sim/config/: destinations.txt
tracking_sim/launch/: trackinig_with_goal.launch.py
tracking_sim/src/: goal_navigator.cpp  tracking_sim.cpp
web/: index.html
