<?xml version="1.0"?>
<package format="3">
  <name>tracking_sim</name>
  <version>2.1.5</version>
  <description>Odom tracker for Gazebo simulation</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>ament_index_cpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <export>
  <build_type>ament_cmake</build_type>
  </export>
  
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

</package>